# Amesite

./: .gitignore  .gitmodules  CMakeLists.txt  EngineDoxyfile  GameDoxyfile  LICENSE  README.md
src/Engine/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  RenderTarget.cpp  RenderTarget.hpp  Resources.cpp  Resources.hpp
src/Engine/Audio/: Listener.cpp  Listener.hpp  SoundBuffer.cpp  SoundBuffer.hpp  SoundFile.hpp  SoundSource.cpp  SoundSource.hpp  SoundSystem.cpp  SoundSystem.hpp  VorbisFile.cpp  VorbisFile.hpp  WaveFile.cpp  WaveFile.hpp
src/Engine/CaveSystem/: CaveSystem.cpp  CaveSystem.hpp
src/Engine/CollisionSystem/: CollisionSystem.cpp  CollisionSystem.hpp
src/Engine/Component/: Animation.cpp  Animation.hpp  Camera.hpp  Collider2DCircle.cpp  Collider2DCircle.hpp  Collider2DLineSegment.hpp  Collider2DRectangle.cpp  Collider2DRectangle.hpp  DirectionalLight.cpp  DirectionalLight.hpp  FakePointLight.cpp  FakePointLight.hpp  Lens.cpp  Lens.hpp  Listener.cpp  Listener.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Parent.cpp  Parent.hpp  ParticleEmitter.cpp  ParticleEmitter.hpp  Physics.cpp  Physics.hpp  PointLight.cpp  PointLight.hpp  RelativeTransform.cpp  RelativeTransform.hpp  SoundSource.cpp  SoundSource.hpp  SpotLight.cpp  SpotLight.hpp  SuperComponent.cpp  SuperComponent.hpp  Transform.cpp  Transform.hpp
src/Engine/Entity/: Entity.cpp  Entity.hpp
src/Engine/Font/: Font.cpp  Font.hpp
src/Engine/GameObject/: Dust.cpp  SuperGameObject.cpp  SuperGameObject.hpp
src/Engine/Geometry/: Cube.cpp  Cube.hpp  Geometry2D.cpp  Geometry2D.hpp  Geometry3D.cpp  Geometry3D.hpp  Map.cpp  Map.hpp  Model.cpp  Model.hpp  OBJModel.cpp  OBJModel.hpp  Plane.cpp  Plane.hpp  Square.cpp  Square.hpp  Terrain.cpp  Terrain.hpp
src/Engine/Lighting/: DeferredLighting.cpp  DeferredLighting.hpp  TileBuffer.cpp  TileBuffer.hpp
src/Engine/Particles/: CuboidParticleEmitter.cpp  CuboidParticleEmitter.hpp  ParticleEmitter.cpp  ParticleEmitter.hpp  ParticleSystem.cpp  ParticleSystem.hpp  ParticleType.hpp  PointParticleEmitter.cpp  PointParticleEmitter.hpp
src/Engine/Physics/: AxisAlignedBoundingBox.cpp  AxisAlignedBoundingBox.hpp  Frustum.cpp  Frustum.hpp  Sphere.cpp  Sphere.hpp
src/Engine/PostProcessing/: ColorFilter.cpp  ColorFilter.hpp  FXAAFilter.cpp  FXAAFilter.hpp  FogFilter.cpp  FogFilter.hpp  GammaCorrectionFilter.cpp  GammaCorrectionFilter.hpp  GlowBlurFilter.cpp  GlowBlurFilter.hpp  GlowFilter.cpp  GlowFilter.hpp  GlowFirstPassFilter.cpp  GlowFirstPassFilter.hpp  PostProcessing.cpp  PostProcessing.hpp
src/Engine/Profiling/: CPUProfiling.cpp  CPUProfiling.hpp  GPUProfiling.cpp  GPUProfiling.hpp  ProfilingManager.cpp  ProfilingManager.hpp  Query.cpp  Query.hpp
src/Engine/Scene/: Scene.cpp  Scene.hpp
src/Engine/Shader/: Shader.cpp  Shader.hpp  ShaderProgram.cpp  ShaderProgram.hpp
src/Engine/System/: AnimationSystem.cpp  AnimationSystem.hpp  CollisionSystem.cpp  CollisionSystem.hpp  DebugDrawingSystem.cpp  DebugDrawingSystem.hpp  ParticleRenderSystem.cpp  ParticleRenderSystem.hpp  ParticleSystem.cpp  ParticleSystem.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  SoundSystem.cpp  SoundSystem.hpp
src/Engine/Texture/: Texture.hpp  Texture2D.cpp  Texture2D.hpp
src/Engine/Threading/: ThreadPool.cpp  ThreadPool.hpp  Threading.cpp  Threading.hpp  Worker.cpp  Worker.hpp
src/Engine/Util/: FileSystem.cpp  FileSystem.hpp  Input.cpp  Input.hpp  Log.cpp  Log.hpp  MarchingSquares.cpp  MarchingSquares.hpp  Picking.cpp  Picking.hpp  Profiling.cpp  Profiling.hpp  Settings.cpp  Settings.hpp
src/Engine/Water/: Water.cpp  Water.hpp
src/Game/: CMakeLists.txt  ControlSchemes.cpp  ControlSchemes.hpp  Game.cpp  Game.hpp  main.cpp  main.cpp.autosave
src/Game/CaveSystem/: CaveSystem.cpp  CaveSystem.hpp
src/Game/Component/: CameraFollow.cpp  CameraFollow.hpp  Controller.cpp  Controller.hpp  Damage.cpp  Damage.hpp  Explode.cpp  Explode.hpp  GridCollide.cpp  GridCollide.hpp  GroundCollide.cpp  GroundCollide.hpp  Health.cpp  Health.hpp  LifeTime.cpp  LifeTime.hpp  Reflect.cpp  Reflect.hpp  Spawner.cpp  Spawner.hpp  Update.cpp  Update.hpp
src/Game/GameObject/: Altar.cpp  Altar.hpp  Bullet.cpp  Bullet.hpp  Camera.cpp  Camera.hpp  Cave.cpp  Cave.hpp  Dust.cpp  Dust.hpp  DyingLight.cpp  DyingLight.hpp  Enemy.cpp  Enemy.hpp  EnemyObject.cpp  EnemyObject.hpp  EnemySpawner.cpp  EnemySpawner.hpp  Explosion.cpp  Explosion.hpp  GameObject.hpp  Pillar.cpp  Pillar.hpp  PillarBall.cpp  PillarBall.hpp  Player.cpp  Player.hpp  Portal.cpp  Portal.hpp  Pylon.cpp  Pylon.hpp  ReviveCircle.cpp  ReviveCircle.hpp  Rock.cpp  Rock.hpp  Scenery.cpp  Scenery.hpp  Shield.cpp  Shield.hpp  Spawn.cpp  (+6 more)
src/Game/GameScenes/: AlbinScene.cpp  AlbinScene.hpp  DanielScene.cpp  DanielScene.hpp  EmptyScene.cpp  EmptyScene.hpp  IvarScene.cpp  IvarScene.hpp  JonathanScene.cpp  JonathanScene.hpp  LoadingScene.cpp  LoadingScene.hpp  MainScene.cpp  MainScene.hpp  MenuScene.cpp  MenuScene.hpp  PontusScene.cpp  PontusScene.hpp  SplashScene.cpp  SplashScene.hpp  WinScene.cpp  WinScene.hpp
src/Game/Menu/: MainMenu.cpp  MainMenu.hpp  Menu.cpp  Menu.hpp  MenuOption.cpp  MenuOption.hpp  MenuSwitch.cpp  MenuSwitch.hpp  OptionsMenu.cpp  OptionsMenu.hpp  PauseMenu.cpp  PauseMenu.hpp  SubMenu.cpp  SubMenu.hpp  SuperMenuOption.cpp  SuperMenuOption.hpp
src/Game/Player/: Player.cpp  Player.hpp
src/Game/System/: AISystem.cpp  AISystem.hpp  CameraSystem.cpp  CameraSystem.hpp  CheckpointSystem.cpp  CheckpointSystem.hpp  ControllerSystem.cpp  ControllerSystem.hpp  DamageSystem.cpp  DamageSystem.hpp  EnemySpawnerSystem.cpp  EnemySpawnerSystem.hpp  ExplodeSystem.cpp  ExplodeSystem.hpp  GridCollideSystem.cpp  GridCollideSystem.hpp  GroundCollideSystem.cpp  GroundCollideSystem.hpp  HealthSystem.cpp  HealthSystem.hpp  LifeTimeSystem.cpp  LifeTimeSystem.hpp  ReflectSystem.cpp  ReflectSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  SpawnerSystem.cpp  SpawnerSystem.hpp  UpdateSystem.cpp  UpdateSystem.hpp
src/Game/Turret/: Turret.cpp  Turret.hpp
src/Game/Util/: CameraUpdate.cpp  CameraUpdate.hpp  CaveGenerator.cpp  (+15 more)
(+69 files in other folders)
